gobmkida/c0/finish_and_score_game
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/finish_and_score_game/src/interface/play_gtp.c:2909:6: error: use of undeclared identifier 'finish_and_score_game_current_seed'
if ( finish_and_score_game_current_seed != seed ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/finish_and_score_game/src/interface/play_gtp.c:2911:1: error: use of undeclared identifier 'finish_and_score_game_current_seed'
finish_and_score_game_current_seed = seeda; 
^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/finish_and_score_game/src/interface/play_gtp.c:2918:32: error: use of undeclared identifier 'finish_and_score_game_current_board'
if ( board[20 * i + 21 + j] != finish_and_score_game_current_board[i][j] ) 
                               ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/finish_and_score_game/src/interface/play_gtp.c:2920:1: error: use of undeclared identifier 'finish_and_score_game_current_board'
finish_and_score_game_current_board[i][j] = board[20 * i + 21 + j]; 
^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/finish_and_score_game/src/obj/2/play_gtp.o] Error 1
